Fix overlapping text on settings page
Think this broke when we split the setting page up into three sections.
This forces the text to wrap onto multiple lines even if it doesn’t
contain spaces (for example an email address).

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -180,6 +180,7 @@ details summary {
     th,
     td {
       @include core-19;
+      word-wrap: break-word;
     }
 
     thead {
